@@ -1,3 +1,8 @@
+249
+
+- Fix setHeader in request builder to remove headers
+  comparing them case-insensitively.
+
 248
 
 - Update Jetty to 12.0.9
